# django-websocket-notifications

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  README.rst  pyproject.toml
.github/workflows/: workflow-pull-request.yml  workflow-push-main.yml  workflow-push-tags.yml
docs/: conf.py  index.rst
tests/: factories.py  router.py  settings.py  test_websocket_notifications.py  urls.py
websocket_notifications/: __init__.py  admin.py  apps.py  consumers.py  helpers.py  managers.py  models.py  routing.py  settings.py  urls.py  views.py
websocket_notifications/api/: rest_framework.py
websocket_notifications/migrations/: 0001_initial.py  0002_alter_notificationgroup_id.py  0003_auto_20231203_0415.py  0004_alter_notificationgroup_code_and_more.py  0004_alter_notificationgroup_content_type_and_more.py
websocket_notifications/snitch/: backends.py
websocket_notifications/templates/websocket_notifications/: listener.html
