[tool.poetry]
name = "django-websocket-notifications"
version = "1.1.0"
description = "A Django package to handle notifications using Django Channels and WebSockets."
readme = "README.rst"
authors = ["Marcos Gabarda <hey@marcosgabarda.com>"]
license = "MIT"
homepage = "https://github.com/marcosgabarda/django-websocket-notifications"
packages = [
    { include = "websocket_notifications" },
]

classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
channels = "^2.4.0"
django-model-utils = "^4.0.0"
djangorestframework = "^3.11.0"
django-snitch = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
factory_boy = "^2.12.0"
django-test-plus = "^1.4.0"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.0"
mypy = "^0.910"
isort = "^5.9.3"
black = "^21.9b0"
pylint = "^2.11.1"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
